feat(server): add swagger for api doc and add user invitation db/handler
